{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 320,
  "lineage": "59e55f6d-8989-e647-5785-68405cb1a42d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/hub-vm-nic",
            "internal_domain_name_suffix": "4kn15z13ojjeflwiqnf4jsuibg.ax.internal.usgovcloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/publicIPAddresses/examplePublicIP",
                "subnet_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/hubNetwork/subnets/hubSubnet"
              }
            ],
            "location": "usgovvirginia",
            "mac_address": "00-1D-D8-06-26-8E",
            "name": "hub-vm-nic",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "ralphael2",
            "virtual_machine_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Compute/virtualMachines/hub-vm"
          },
          "dependencies": [
            "azurerm_public_ip.hub-pip",
            "azurerm_resource_group.example",
            "azurerm_subnet.hub",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/spoke1-vm-nic",
            "internal_domain_name_suffix": "220b4ywxuw3e3dlblvi5ztywba.ax.internal.usgovcloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.3.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/publicIPAddresses/spoke1PublicIP",
                "subnet_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke1Network/subnets/spoke1Subnet"
              }
            ],
            "location": "usgovvirginia",
            "mac_address": "00-1D-D8-0B-50-DF",
            "name": "spoke1-vm-nic",
            "private_ip_address": "10.3.0.4",
            "private_ip_addresses": [
              "10.3.0.4"
            ],
            "resource_group_name": "ralphael2",
            "virtual_machine_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Compute/virtualMachines/spoke1-vm"
          },
          "dependencies": [
            "azurerm_public_ip.spoke1",
            "azurerm_resource_group.example",
            "azurerm_subnet.spoke1",
            "azurerm_virtual_network.spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke2-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/spoke2-vm-nic",
            "internal_domain_name_suffix": "qsiv5lylmqfu1jyl2lolbdzadf.ax.internal.usgovcloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.4.0.63",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/publicIPAddresses/spoke2PublicIP",
                "subnet_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke2Network/subnets/spoke2Subnet"
              }
            ],
            "location": "usgovvirginia",
            "mac_address": "00-1D-D8-0C-01-7E",
            "name": "spoke2-vm-nic",
            "private_ip_address": "10.4.0.63",
            "private_ip_addresses": [
              "10.4.0.63"
            ],
            "resource_group_name": "ralphael2",
            "virtual_machine_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Compute/virtualMachines/spoke2-vm"
          },
          "dependencies": [
            "azurerm_public_ip.spoke2",
            "azurerm_resource_group.example",
            "azurerm_subnet.spoke2",
            "azurerm_virtual_network.spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/hub-vm-nic|/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkSecurityGroups/hub-vm-nsg",
            "network_interface_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/hub-vm-nic",
            "network_security_group_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkSecurityGroups/hub-vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.hub-nic",
            "azurerm_network_security_group.hub",
            "azurerm_public_ip.hub-pip",
            "azurerm_resource_group.example",
            "azurerm_subnet.hub",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/spoke1-vm-nic|/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkSecurityGroups/spoke-vm-nsg",
            "network_interface_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/spoke1-vm-nic",
            "network_security_group_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkSecurityGroups/spoke-vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.spoke1-nic",
            "azurerm_network_security_group.spoke",
            "azurerm_public_ip.spoke1",
            "azurerm_resource_group.example",
            "azurerm_subnet.spoke1",
            "azurerm_virtual_network.spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/spoke2-vm-nic|/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkSecurityGroups/spoke-vm-nsg",
            "network_interface_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkInterfaces/spoke2-vm-nic",
            "network_security_group_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkSecurityGroups/spoke-vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.spoke2-nic",
            "azurerm_network_security_group.spoke",
            "azurerm_public_ip.spoke2",
            "azurerm_resource_group.example",
            "azurerm_subnet.spoke2",
            "azurerm_virtual_network.spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkSecurityGroups/hub-vm-nsg",
            "location": "usgovvirginia",
            "name": "hub-vm-nsg",
            "resource_group_name": "ralphael2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/networkSecurityGroups/spoke-vm-nsg",
            "location": "usgovvirginia",
            "name": "spoke-vm-nsg",
            "resource_group_name": "ralphael2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hub-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/publicIPAddresses/examplePublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.159.156.221",
            "ip_version": "IPv4",
            "location": "usgovvirginia",
            "name": "examplePublicIP",
            "resource_group_name": "ralphael2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/publicIPAddresses/spoke1PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.159.142.5",
            "ip_version": "IPv4",
            "location": "usgovvirginia",
            "name": "spoke1PublicIP",
            "resource_group_name": "ralphael2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/publicIPAddresses/spoke2PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.159.33.161",
            "ip_version": "IPv4",
            "location": "usgovvirginia",
            "name": "spoke2PublicIP",
            "resource_group_name": "ralphael2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/hubNetwork/subnets/hubSubnet",
            "name": "hubSubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "ralphael2",
            "virtual_network_name": "hubNetwork"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.3.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke1Network/subnets/spoke1Subnet",
            "name": "spoke1Subnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "ralphael2",
            "virtual_network_name": "spoke1Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.4.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke2Network/subnets/spoke2Subnet",
            "name": "spoke2Subnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "ralphael2",
            "virtual_network_name": "spoke2Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tier2-GWsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.128/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ralphael2",
            "virtual_network_name": "tier2Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.tier2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tier2-ergsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.160/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network/subnets/Tier2EGRSubnet",
            "name": "Tier2EGRSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ralphael2",
            "virtual_network_name": "tier2Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.tier2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e7bf9bf2-727d-4252-aec8-834be4ca880e",
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/hubNetwork",
            "location": "usgovvirginia",
            "name": "hubNetwork",
            "resource_group_name": "ralphael2",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/hubNetwork/subnets/hubSubnet",
                "name": "hubSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "621f34e7-a5d7-4eba-8d61-5d51fccf1608",
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke1Network",
            "location": "usgovvirginia",
            "name": "spoke1Network",
            "resource_group_name": "ralphael2",
            "subnet": [
              {
                "address_prefix": "10.3.0.0/24",
                "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke1Network/subnets/spoke1Subnet",
                "name": "spoke1Subnet"
              },
              {
                "address_prefix": "10.3.1.0/24",
                "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke1Network/subnets/appgwSubnet",
                "name": "appgwSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.4.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "af5f9184-640b-4d0b-a70b-e2dcb08f201d",
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke2Network",
            "location": "usgovvirginia",
            "name": "spoke2Network",
            "resource_group_name": "ralphael2",
            "subnet": [
              {
                "address_prefix": "10.4.0.0/24",
                "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke2Network/subnets/spoke2Subnet",
                "name": "spoke2Subnet"
              },
              {
                "address_prefix": "10.4.1.0/24",
                "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke2Network/subnets/ingress-appgateway-subnet",
                "name": "ingress-appgateway-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tier2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.128/26"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a9b48b23-607b-49c3-ab78-7f842cf67d2f",
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network",
            "location": "usgovvirginia",
            "name": "tier2Network",
            "resource_group_name": "ralphael2",
            "subnet": [
              {
                "address_prefix": "10.0.0.128/27",
                "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.0.160/27",
                "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network/subnets/Tier2EGRSubnet",
                "name": "Tier2EGRSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_tier2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/hubNetwork/virtualNetworkPeerings/hub-to-tier2",
            "name": "hub-to-tier2",
            "remote_virtual_network_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network",
            "resource_group_name": "ralphael2",
            "use_remote_gateways": false,
            "virtual_network_name": "hubNetwork"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.hub",
            "azurerm_virtual_network.tier2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke1_to_tier2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke1Network/virtualNetworkPeerings/spoke1-to-tier2",
            "name": "spoke1-to-tier2",
            "remote_virtual_network_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network",
            "resource_group_name": "ralphael2",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke1Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.spoke1",
            "azurerm_virtual_network.tier2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke2_to_tier2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke2Network/virtualNetworkPeerings/spoke2-to-tier2",
            "name": "spoke2-to-tier2",
            "remote_virtual_network_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network",
            "resource_group_name": "ralphael2",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke2Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.spoke2",
            "azurerm_virtual_network.tier2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tier2_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network/virtualNetworkPeerings/tier2-to-hub",
            "name": "tier2-to-hub",
            "remote_virtual_network_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/hubNetwork",
            "resource_group_name": "ralphael2",
            "use_remote_gateways": false,
            "virtual_network_name": "tier2Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.hub",
            "azurerm_virtual_network.tier2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tier2_to_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network/virtualNetworkPeerings/tier2-to-spoke1",
            "name": "tier2-to-spoke1",
            "remote_virtual_network_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke1Network",
            "resource_group_name": "ralphael2",
            "use_remote_gateways": false,
            "virtual_network_name": "tier2Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.spoke1",
            "azurerm_virtual_network.tier2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tier2_to_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/tier2Network/virtualNetworkPeerings/tier2-to-spoke2",
            "name": "tier2-to-spoke2",
            "remote_virtual_network_id": "/subscriptions/46c1bdab-b54a-49ba-a449-36af32ddee1c/resourceGroups/ralphael2/providers/Microsoft.Network/virtualNetworks/spoke2Network",
            "resource_group_name": "ralphael2",
            "use_remote_gateways": false,
            "virtual_network_name": "tier2Network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.spoke2",
            "azurerm_virtual_network.tier2"
          ]
        }
      ]
    }
  ]
}